test/official_tests/constructor/missing_arguments.lox
class Foo {
  init(a, b) {}
}

var foo = Foo(1); // error: {"line":5,"message":"Function 'Foo::Foo' expected 2 arguments but got 1","type":"RuntimeError"}
